Fix card spacing in home page

--- a/app/style.css
+++ b/app/style.css
@@ -573,7 +573,7 @@ ul.list {
 
 .page--home .header {
     height: 30%;
-    min-height: 220px;
+    min-height: 240px;
     max-height: 280px;
     max-width: none;
 }
@@ -620,7 +620,8 @@ ul.list {
 
 .page--home .tabbedContainer-slide .card {
     max-width: 400px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /*
